--- a/main.css
+++ b/main.css
@@ -1,11 +1,11 @@
 h1
 {
 font-family: Arial;
-background-color:  green;
+font-size: 18;
 }
 
 h2, h3
 {
 font-family: Garamond;
-color: blue;
+font-size: 14;
 }
