--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,12 @@ h1
 {
 font-family: Arial;
 font-size: 18;
-color: black;
+color: red;
 }
 
 h2, h3
 {
 font-family: Garamond;
 font-size: 14;
-color: orange;
+color: black;
 }
